--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - '0.10'
+  - '0.11'
 script: make test-coveralls
 install:
   - 'make install'
-before_script:
-  - alias node='node_modules/.bin/gnode'
+services:
+  - redis-server
