--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.0.1",
   "keywords": ["koa", "middleware", "session", "redis"],
   "author": "dead_horse <dead_horse@qq.com>",
-  "files": ["index.js"],
   "dependencies": {
     "co-redis": "0.0.2",
     "debug": "0.7.4",
@@ -15,12 +14,13 @@
     "blanket": "*",
     "contributors": "*",
     "coveralls": "*",
-    "koa": "0.1.2",
+    "koa": "latest",
     "mocha": "*",
     "mocha-lcov-reporter": "*",
     "should": "*",
     "supertest": "0.8.2",
-    "travis-cov": "*"
+    "travis-cov": "*",
+    "koa-sess": "latest"
   },
   "engines": {
     "node": ">= 0.11.9"
