--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "dependencies": {
     "co-redis": "1.1.0",
     "debug": "0.7.4",
-    "redis": "0.10.0"
+    "redis": "0.10.1"
   },
   "devDependencies": {
     "autod": "~0.1.0",
     "blanket": "*",
-    "co": "3.0.2",
+    "co": "3.0.4",
     "contributors": "*",
     "coveralls": "*",
-    "koa": "*",
-    "koa-sess": "*",
+    "koa": "~0.5.0",
+    "koa-sess": "0.1.0-beta1",
     "mocha": "*",
     "mocha-lcov-reporter": "*",
-    "should": "3.1.2",
+    "should": "3.1.3",
     "supertest": "0.8.2",
     "travis-cov": "*"
   },
