--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "keywords": ["koa", "middleware", "session", "redis"],
   "author": "dead_horse <dead_horse@qq.com>",
   "dependencies": {
-    "co-redis": "1.1.0",
-    "debug": "0.7.4",
-    "redis": "0.10.1"
+    "co-redis": "~1.1.0",
+    "debug": "~1.0.1",
+    "redis": "~0.10.3"
   },
   "devDependencies": {
-    "autod": "~0.1.0",
+    "autod": "~0.2.0",
     "blanket": "*",
-    "co": "3.0.4",
+    "co": "~3.0.6",
     "contributors": "*",
     "coveralls": "*",
-    "koa": "~0.5.0",
+    "koa": "~0.7.0",
     "koa-sess": "0.1.0-beta1",
     "mocha": "*",
     "mocha-lcov-reporter": "*",
-    "should": "3.1.3",
+    "should": "~4.0.1",
     "supertest": "0.8.2",
     "travis-cov": "*"
   },
