--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "dead_horse <dead_horse@qq.com>",
   "dependencies": {
     "co-redis": "~1.1.0",
-    "debug": "~1.0.2",
-    "redis": "~0.10.3"
+    "debug": "*",
+    "redis": "~0.12.1"
   },
   "devDependencies": {
     "autod": "~0.2.0",
@@ -16,7 +16,7 @@
     "co": "~3.0.6",
     "contributors": "*",
     "coveralls": "*",
-    "koa": "~0.7.0",
+    "koa": "~0.13.0",
     "koa-generic-session": "~1.0.0",
     "mocha": "*",
     "mocha-lcov-reporter": "*",
