--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
-  - '0.11'
+  - '0.12'
+  - "iojs-v1"
+  - "iojs-v2"
+  - "iojs-v3"
 script: make test-coveralls
 install:
   - 'make install'
