--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: node_js
 node_js:
-  - '0.12'
-  - "iojs-v1"
-  - "iojs-v2"
-  - "iojs-v3"
+  - "4"
+  - "5"
+sudo: false
 script: make test-coveralls
 install:
-  - 'make install'
+  - make install
 services:
   - redis-server
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
