Fix coveralls, update devDependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
   - "4"
   - "5"
 sudo: false
-install: npm install
-script: make test-coveralls
+script: make test-travis
+after_script: npm install coveralls && cat ./coverage/lcov.info | coveralls
 services:
   - redis-server
 env:
