--- a/package.json
+++ b/package.json
@@ -15,15 +15,12 @@
     "autod": "~0.2.0",
     "blanket": "*",
     "co": "~3.0.6",
-    "contributors": "*",
-    "coveralls": "*",
-    "koa": "~0.13.0",
-    "koa-generic-session": "~1.0.0",
+    "istanbul": "*",
+    "koa": "~1.1.2",
+    "koa-generic-session": "~1.10.0",
     "mocha": "*",
-    "mocha-lcov-reporter": "*",
     "should": "~4.0.4",
-    "supertest": "0.8.2",
-    "travis-cov": "*"
+    "supertest": "0.8.2"
   },
   "engines": {
     "node": ">= 0.11.9"
