use co-mocha and generators instead of co for tests (see comment in #13)

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "redis": "2.4.*"
   },
   "devDependencies": {
-    "mocha": "*",
+    "autod": "*",
+    "co-mocha": "*",
     "istanbul": "*",
-    "co": "4.6.*",
-    "should": "*",
-    "autod": "*"
+    "mocha": "*",
+    "should": "*"
   },
   "optionalDependencies": {
     "hiredis": "0.4.*"
