--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "url": "https://github.com/koajs/koa-redis/issues"
   },
   "homepage": "https://github.com/koajs/koa-redis",
-  "version": "1.0.1",
-  "main": "./index.js",
+  "version": "2.0.0",
+  "files": ["./index.js"],
   "scripts": {
-    "test": "istanbul cover node_modules/mocha/bin/_mocha -- \"test/**/*.test.js\"",
-    "test-only": "mocha \"test/**/*.test.js\"",
-    "autod": "autod -w -e example --prefix=~ --keep=debug, --semver=koa@1"
+    "test": "istanbul cover node_modules/mocha/bin/_mocha -- --require co-mocha \"test/**/*.test.js\"",
+    "test-only": "mocha --require co-mocha \"test/**/*.test.js\"",
+    "autod": "autod -w --prefix=~"
   },
   "keywords": [
     "koa",
@@ -22,18 +22,22 @@
   "author": "dead_horse <dead_horse@qq.com>",
   "dependencies": {
     "co-redis": "~2.0.0",
-    "debug": "*",
-    "redis": "2.4.*"
+    "debug": "~2.2.0",
+    "redis": "~2.4.2"
   },
   "devDependencies": {
-    "autod": "*",
-    "co-mocha": "*",
-    "istanbul": "*",
+    "autod": "2",
+    "co-mocha": "~1.1.2",
+    "connect": "~3.4.0",
+    "connect-redis": "~3.0.2",
+    "istanbul": "~0.4.1",
+    "koa": "~1.1.2",
+    "koa-generic-session": "~1.10.1",
     "mocha": "*",
-    "should": "*"
+    "should": "~8.0.2"
   },
   "optionalDependencies": {
-    "hiredis": "0.4.*"
+    "hiredis": "~0.4.1"
   },
   "engines": {
     "node": ">= 4"
