--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "co-redis": "~2.1.0",
     "debug": "~2.2.0",
-    "redis": "~2.5.1"
+    "redis": "~2.6.0-2"
   },
   "devDependencies": {
     "autod": "2.4.2",
