--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
   ],
   "author": "dead_horse <dead_horse@qq.com>",
   "dependencies": {
-    "co-redis": "~2.1.0",
-    "debug": "~2.2.0",
-    "redis": "~2.6.0-2"
+    "co-redis": "~2.1.1",
+    "debug": "~2.3.3",
+    "redis": "~2.6.3"
   },
   "devDependencies": {
-    "autod": "2.7.0",
-    "co-mocha": "~1.1.2",
-    "connect": "~3.4.0",
+    "autod": "2.7.1",
+    "co-mocha": "~1.1.3",
+    "connect": "~3.5.0",
     "connect-redis": "~3.1.0",
-    "istanbul": "~0.4.1",
-    "koa": "~1.2.0",
+    "istanbul": "~0.4.5",
+    "koa": "~1.2.4",
     "koa-generic-session": "~1.11.3",
+    "should": "~11.1.1"
     "mocha": "*",
-    "should": "~10.0.0"
   },
   "optionalDependencies": {
     "hiredis": "~0.5.0"
