--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/koajs/koa-redis/issues"
   },
   "homepage": "https://github.com/koajs/koa-redis",
-  "version": "2.1.3",
+  "version": "3.0.0",
   "main": "index.js",
   "scripts": {
     "test": "istanbul cover node_modules/mocha/bin/_mocha -- --require co-mocha \"test/**/*.test.js\"",
@@ -31,7 +31,7 @@
     "connect": "~3.5.0",
     "connect-redis": "~3.1.0",
     "istanbul": "~0.4.5",
-    "koa": "~1.2.4",
+    "koa": "^2.2.0",
     "koa-generic-session": "~1.11.3",
     "mocha": "*",
     "should": "~11.1.1"
