--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "istanbul cover node_modules/mocha/bin/_mocha -- --require co-mocha \"test/**/*.test.js\"",
     "test-only": "mocha --require co-mocha \"test/**/*.test.js\"",
-    "autod": "autod -w --prefix=~"
+    "autod": "autod -w --prefix=^ --keep=koa -D co-mocha,mocha,istanbul,autod"
   },
   "keywords": [
     "koa",
@@ -21,20 +21,21 @@
   ],
   "author": "dead_horse <dead_horse@qq.com>",
   "dependencies": {
-    "co-redis": "~2.1.1",
-    "debug": "~2.3.3",
-    "redis": "~2.6.3"
+    "co-redis": "^2.1.1",
+    "co-wrap-all": "^1.0.0",
+    "debug": "^2.6.3",
+    "redis": "^2.7.1"
   },
   "devDependencies": {
-    "autod": "2.7.1",
-    "co-mocha": "~1.1.3",
-    "connect": "~3.5.0",
-    "connect-redis": "~3.1.0",
-    "istanbul": "~0.4.5",
-    "koa": "~1.2.4",
-    "koa-generic-session": "~1.11.3",
-    "mocha": "*",
-    "should": "~11.1.1"
+    "autod": "^2.8.0",
+    "co-mocha": "^1.2.0",
+    "connect": "^3.6.0",
+    "connect-redis": "^3.2.0",
+    "istanbul": "^0.4.5",
+    "koa": "^1.2.4",
+    "koa-generic-session": "^1.11.5",
+    "mocha": "^3.2.0",
+    "should": "^11.2.1"
   },
   "optionalDependencies": {
     "hiredis": "~0.5.0"
