Replace koa-generic-session with koa-session
Migrating from koa-generic-session to koa-session is a major
breaking change. This implementation uses Node's util.promisify
function for converting a callback-based function to a Promise-
based one, which means Node v8+ is required.

This change also:
- converts all generators to async/await functions
- has RedisStore extend EventEmitter, since that is the prefered
  method when using class inheritance
- dropped backward compatibility for options.socket and options.pass

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-redis",
-  "description": "koa session with redis using koa-generic-session",
+  "description": "koa session with redis using koa-session",
   "repository": "koajs/koa-redis",
   "bugs": {
     "url": "https://github.com/koajs/koa-redis/issues"
@@ -21,8 +21,6 @@
   ],
   "author": "dead_horse <dead_horse@qq.com>",
   "dependencies": {
-    "co-redis": "^2.1.1",
-    "co-wrap-all": "^1.0.0",
     "debug": "^3.1.0",
     "redis": "^2.8.0"
   },
@@ -33,15 +31,15 @@
     "connect-redis": "^3.3.0",
     "istanbul": "^0.4.5",
     "koa": "^2.3.0",
-    "koa-generic-session": "^2.0.0",
     "mocha": "^3.5.0",
     "should": "^13.0.1"
+    "koa-session": "^5.8.1",
   },
   "optionalDependencies": {
     "hiredis": "~0.5.0"
   },
   "engines": {
-    "node": ">= 4"
+    "node": ">=8"
   },
   "license": "MIT"
 }
