--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "co-redis": "^2.1.1",
     "co-wrap-all": "^1.0.0",
     "debug": "^3.1.0",
+    "ioredis": "^3.2.2",
     "redis": "^2.8.0"
   },
   "devDependencies": {
