--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "bugs": {
     "url": "https://github.com/koajs/koa-redis/issues"
   },
+  "files": [
+    "index.js"
+  ],
   "homepage": "https://github.com/koajs/koa-redis",
   "version": "3.1.2",
   "main": "index.js",
