chore: version bump deps, added node@12 to travis tests

--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
     "Nick Baugh <niftylettuce@gmail.com> (http://niftylettuce.com/)"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.4.3",
+    "@babel/runtime": "^7.8.3",
     "co-wrap-all": "^1.0.0",
     "debug": "^4.1.1",
-    "ioredis": "^4.9.0"
+    "ioredis": "^4.14.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@commitlint/cli": "^7.5.2",
-    "@commitlint/config-conventional": "^7.5.0",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "autod": "^3.1.0",
     "co-mocha": "^1.2.2",
-    "connect": "^3.6.6",
-    "connect-redis": "^3.4.1",
-    "eslint": "^5.16.0",
+    "connect": "^3.7.0",
+    "connect-redis": "^4.0.3",
+    "eslint": "^6.8.0",
     "eslint-config-xo-lass": "^1.0.3",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-node": "^11.0.0",
     "fixpack": "^2.3.1",
-    "husky": "^2.1.0",
+    "husky": "3.x",
     "istanbul": "^0.4.5",
-    "koa": "^2.7.0",
-    "koa-generic-session": "^2.0.1",
-    "lint-staged": "^8.1.5",
-    "mocha": "3.5.3",
-    "remark-cli": "^6.0.1",
-    "remark-preset-github": "^0.0.13",
-    "rimraf": "^2.6.3",
+    "koa": "^2.11.0",
+    "koa-generic-session": "^2.0.4",
+    "lint-staged": "^9.5.0",
+    "mocha": "3.x",
+    "remark-cli": "^7.0.1",
+    "remark-preset-github": "^0.0.16",
+    "rimraf": "^3.0.0",
     "should": "^13.2.3",
-    "xo": "^0.24.0"
+    "xo": "^0.25.3"
   },
   "engines": {
     "node": ">= 4"
